--- a/packages/nest/package.json
+++ b/packages/nest/package.json
@@ -27,7 +27,10 @@
     "@nestjs/platform-socket.io": "^6.11.7",
     "@nestjs/serve-static": "^1.0.2",
     "@nestjs/websockets": "^6.11.7",
+    "class-validator": "^0.11.0",
     "reflect-metadata": "^0.1.13",
+    "rethinkdb": "^2.4.2",
+    "rethinkdb-ts": "^2.4.2",
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.4",
     "uuid": "^3.4.0"
