--- a/packages/nest/package.json
+++ b/packages/nest/package.json
@@ -30,6 +30,8 @@
     "@nestjs/serve-static": "^1.0.2",
     "@nestjs/websockets": "^6.11.7",
     "class-validator": "^0.11.0",
+    "cookie": "^0.4.1",
+    "cookie-parser": "^1.4.5",
     "reflect-metadata": "^0.1.13",
     "rethinkdb": "^2.4.2",
     "rethinkdb-ts": "^2.4.2",
