--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -19,13 +19,14 @@
     "core-js": "^3.6.4",
     "lodash": "^4.17.15",
     "register-service-worker": "^1.6.2",
+    "rxjs": "^6.5.5",
     "socket.io-client": "^2.3.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5"
   },
   "devDependencies": {
     "@babel/plugin-proposal-optional-chaining": "^7.8.3",
-    "@types/lodash": "^4.14.149",
+    "@types/lodash": "^4.14.150",
     "@types/socket.io-client": "^1.4.32",
     "@typescript-eslint/eslint-plugin": "^2.18.0",
     "@typescript-eslint/parser": "^2.18.0",
