--- a/packages/nest/package.json
+++ b/packages/nest/package.json
@@ -23,49 +23,50 @@
     "redis": "redis-server"
   },
   "dependencies": {
-    "@nestjs/common": "^6.10.14",
-    "@nestjs/core": "^6.10.14",
-    "@nestjs/platform-express": "^6.11.7",
+    "@nestjs/common": "^7.0.8",
+    "@nestjs/core": "^7.0.8",
+    "@nestjs/platform-express": "^7.0.8",
     "@nestjs/platform-socket.io": "^7.0.8",
-    "@nestjs/serve-static": "^1.0.2",
-    "@nestjs/websockets": "^6.11.7",
-    "class-validator": "^0.11.0",
+    "@nestjs/serve-static": "^2.1.0",
+    "@nestjs/websockets": "^7.0.8",
+    "class-validator": "^0.12.1",
     "cookie": "^0.4.1",
     "cookie-parser": "^1.4.5",
+    "morgan": "^1.10.0",
     "reflect-metadata": "^0.1.13",
     "rethinkdb": "^2.4.2",
     "rethinkdb-ts": "^2.4.2",
     "rimraf": "^3.0.0",
-    "rxjs": "^6.5.4",
+    "rxjs": "^6.5.5",
     "socket.io-redis": "^5.2.0",
-    "uuid": "^3.4.0"
+    "uuid": "^7.0.3"
   },
   "devDependencies": {
-    "@nestjs/cli": "^6.13.2",
-    "@nestjs/schematics": "^6.8.1",
-    "@nestjs/testing": "^6.10.14",
-    "@types/express": "^4.17.2",
-    "@types/jest": "25.1.2",
-    "@types/lodash": "^4.14.149",
-    "@types/node": "^13.1.6",
+    "@nestjs/cli": "^7.1.2",
+    "@nestjs/schematics": "^7.0.0",
+    "@nestjs/testing": "^7.0.8",
+    "@types/express": "^4.17.6",
+    "@types/jest": "25.2.1",
+    "@types/lodash": "^4.14.150",
+    "@types/node": "^13.13.2",
     "@types/socket.io": "^2.1.4",
     "@types/socket.io-redis": "^1.0.25",
     "@types/supertest": "^2.0.8",
-    "@types/uuid": "^3.4.7",
-    "@typescript-eslint/eslint-plugin": "^2.12.0",
-    "@typescript-eslint/parser": "^2.12.0",
+    "@types/uuid": "^7.0.2",
+    "@typescript-eslint/eslint-plugin": "^2.29.0",
+    "@typescript-eslint/parser": "^2.29.0",
     "eslint": "^6.7.2",
-    "eslint-config-prettier": "^6.7.0",
-    "eslint-plugin-import": "^2.19.1",
-    "jest": "25.0.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.20.2",
+    "jest": "25.4.0",
     "jest-extended": "^0.11.5",
-    "prettier": "^1.18.2",
+    "prettier": "^2.0.5",
     "supertest": "^4.0.2",
-    "ts-jest": "25.2.0",
-    "ts-loader": "^6.2.1",
-    "ts-node": "^8.6.0",
+    "ts-jest": "25.4.0",
+    "ts-loader": "^7.0.1",
+    "ts-node": "^8.9.0",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^3.7.4"
+    "typescript": "^3.8.3"
   },
   "jest": {
     "moduleFileExtensions": [
