--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-optional-chaining": "^7.8.3",
+    "@types/axios": "^0.14.0",
     "@types/lodash": "^4.14.150",
     "@types/socket.io-client": "^1.4.32",
     "@typescript-eslint/eslint-plugin": "^2.18.0",
