bug ping/pong connection fixed

--- a/packages/nest/package.json
+++ b/packages/nest/package.json
@@ -11,7 +11,7 @@
     "start": "nest start",
     "dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node dist/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest --verbose --runInBand",
     "test:watch": "jest --watch --verbose --runInBand",
@@ -20,7 +20,9 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "pm2": "pm2 restart ecosystem.config.js",
     "db": "rethinkdb",
-    "redis": "redis-server"
+    "redis": "redis-server",
+    "rsync": "rsync -v -r dist package.json ecosystem.config.js root@128.199.216.159:/root/minichat",
+    "deploy": "yarn build && yarn rsync"
   },
   "dependencies": {
     "@nestjs/common": "^7.0.8",
