--- a/packages/nest/tsconfig.json
+++ b/packages/nest/tsconfig.json
@@ -8,7 +8,7 @@
     "target": "es2017",
     "sourceMap": true,
     "outDir": "./dist",
-    "rootDir": "./src",
+    "rootDir": "./",
     "baseUrl": "./",
     "incremental": true,
     "allowJs": true,
