--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "rsync": "rsync -v -r dist/* root@128.199.216.159:/var/www/minichat",
+    "deploy": "yarn build && yarn deploy"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
