--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -7,7 +7,7 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "rsync": "rsync -v -r dist/* root@128.199.216.159:/var/www/minichat",
-    "deploy": "yarn build && yarn deploy"
+    "deploy": "yarn build && yarn rsync"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
