--- a/packages/nest/nginx.conf
+++ b/packages/nest/nginx.conf
@@ -1,15 +1,14 @@
 upstream minichat_server {
-  # enable sticky session based on IP
-  ip_hash;
+  ip_hash; # enable sticky session based on IP
   server 128.199.216.159:4211;
   server 128.199.216.159:4212;
 }
 server {
+  listen 80;      # managed by Certbot
+  listen 443 ssl; # managed by Certbot
   server_name minichat.krist7599555.ml www.minichat.krist7599555.ml;
-
   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
   proxy_set_header Host $host;
-
   # enable WebSockets
   proxy_http_version 1.1;
   proxy_set_header Upgrade $http_upgrade;
@@ -27,8 +26,6 @@ server {
     try_files $uri $uri/ /index.html =404;
   }
 
-  listen 80; # managed by Certbot
-  listen 443 ssl; # managed by Certbot
   ssl_certificate /etc/letsencrypt/live/minichat.krist7599555.ml/fullchain.pem; # managed by Certbot
   ssl_certificate_key /etc/letsencrypt/live/minichat.krist7599555.ml/privkey.pem; # managed by Certbot
   include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
